# intelligent-recruiter

./: .gitignore  README.md  light_demo.ipynb  requirements-notebook.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
data/: interview1.docx  interview2.docx  interview3.docx  interview4.docx  interview5.docx  interview6.docx
demo/ui/: main.py  pyproject.toml
demo/ui/components/: agent_list.py  api_key_dialog.py  async_poller.py  chat_bubble.py  conversation.py  conversation_list.py  event_viewer.py  form_render.py  header.py  page_scaffold.py  poller.py  side_nav.py  task_card.py
demo/ui/pages/: agent_list.py  conversation.py  event_list.py  home.py  settings.py
demo/ui/service/: types.py
demo/ui/service/client/: client.py
demo/ui/service/server/: adk_host_manager.py  server.py  (+2 more)
demo/ui/state/: host_agent_service.py  state.py
demo/ui/styles/: styles.py
demo/ui/tests/: test_adk_host_manager.py
demo/ui/utils/: agent_card.py
samples/python/: pyproject.toml
samples/python/agents/autogen/: README.md  __init__.py  __main__.py  agent.py  agent_executor.py  task_manager.py
samples/python/agents/background_check_agent/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/agents/hr_agent/: __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/agents/semantickernel/: __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/common/: types.py
samples/python/common/client/: client.py
samples/python/hosts/multiagent/: host_agent.py  remote_agent_connection.py
