[project]
name = "a2a-hr-agent"
version = "0.1.0"
description = "Leverage Semantic Kernel Agents using the A2A protocol."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "semantic-kernel>=1.28.0",
    "a2a-samples",
    "azure-ai-inference>=1.0.0b9",
    "autogen-agentchat~=0.6",
    "autogen-ext~=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
a2a-samples = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
